--- a/fm/package.json
+++ b/fm/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.17",
     "@apollo/react-hooks": "^3.1.2",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
@@ -10,7 +11,7 @@
     "apollo-server": "^2.9.6",
     "babel-plugin-emotion": "^10.0.21",
     "flexboxgrid": "^6.3.1",
-    "graphql": "^14.5.8",
+    "graphql": "^14.7.0",
     "graphql-tag": "^2.10.1",
     "json5": "^2.1.0",
     "lowdb": "^1.0.0",
